--- a/public/css/recipefullview.css
+++ b/public/css/recipefullview.css
@@ -331,6 +331,7 @@ body.dark-theme {
         position: sticky;
         top: 0;
         left: 0;
+        z-index: 5;
     }
 
     .headerStart {
