--- a/public/css/recipeoftheday.css
+++ b/public/css/recipeoftheday.css
@@ -333,6 +333,7 @@ header {
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 5;
 }
 
 header.dark-theme {
