--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -91,6 +91,7 @@ header {
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 5;
 }
 
 .headerStart {
