--- a/public/css/uploadrecipe.css
+++ b/public/css/uploadrecipe.css
@@ -96,6 +96,7 @@ header {
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 5;
 }
 
 .headerStart {
